@@ -1,3 +1,6 @@
+2011-01-05 Alexander Opitz <opi@gmx.at>
+* #58 Add Logging output to Cache Backend
+
 2011-01-02 Alexander Opitz <opi@gmx.at>
 * #50 Implement Filecache
 
